--- a/css.css
+++ b/css.css
@@ -6,3 +6,10 @@ h1 {
 h2 {
 	text-align: center;
 }
+
+.button {
+	background-color: blue;
+	text-align: center;
+	border-top: 4px;
+	border-bottom: 4px;
+}
