--- a/css.css
+++ b/css.css
@@ -10,7 +10,6 @@ h2 {
 .button {
 	background-color: blue;
 	text-align: center;
-	border-top: 4px;
-	border-bottom: 4px;
+	padding: 45, 46;
 	text-decoration: none;
 }
