--- a/css.css
+++ b/css.css
@@ -8,8 +8,8 @@ h2 {
 }
 
 .button {
-	background-color: blue;
-	text-align: center;
+	background-color: lightblue;
+	text-align: right;
 	padding: 45, 46;
 	text-decoration: none;
 }
